CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.16

	- The LPD backend now uses a 30-second timeout when
	  sending commands and control files, and a 30-second
	  timeout when retrieving responses from an LPD server. 
	  If a timeout occurs, it retries up to 10 times.  This
	  helps to make LPD printing over VPNs work more
	  reliably.
	- The USB backend now supports device URIs based on the
	  printer serial number and/or model number under Linux.
	  This avoids the "wrong device filename" problem when
	  using more than one USB printer.
	- Now just shutdown the receiving end of a client
	  connection when sending an error that requires the
	  server to disconnect from the client afterwards.  This
	  fixes a problem when doing remote administration with
	  encryption enabled.
	- The scheduler did not send a printer-state-message
	  attribute if the string was empty; it now always sends
	  this attribute.  This caused the printer message to be
	  displayed for other printers in the web interface.
	- The LPD backend now supports a "manual_copies" option,
	  e.g.: "lpd://server/queue?manual_copies=no", in order
	  to handle copies for raw jobs to printers that don't
	  implement the LPD protocol properly...
	- The "mirror" option was not being handled by the
	  PostScript or image filters.
	- Updated the cupsaddsmb command to support the new CUPS
	  driver for Windows NT/2k/XP.
	- Filter status lines longer than 1023 characters could
	  cause the scheduler to get into an infinite loop.
	- The scheduler didn't reset the job state to pending
	  when modifying an active printer.
	- Now limit the maximum number of recursion steps when
	  searching for a filter for a job, in case a user
	  defines a circular filter rule.
	- The PostScript filter would embed an invalid
	  requirements comment in some cases.
	- Added support for embedded job tickets in PostScript
	  files.
	- The PostScript filter now detects EPS files and should
	  better handle printing EPS files.